--- a/views/register.ejs
+++ b/views/register.ejs
@@ -1,9 +1,47 @@
 <%-include('partials/header') %>
-<h1>Sign Up!</h1>
+<!-- <h1>Sign Up!</h1>
 
 <form action="/register" method="post">
   <input type="text" name="username" placeholder="username" />
   <input type="password" name="password" placeholder="password" />
   <button>Sign Up</button>
-</form>
+</form> -->
+
+<div class="container">
+  <h1 style="margin-left: 40%">Sign Up</h1>
+  <form action="/register" method="POST">
+    <div class="form-group">
+      <label for="exampleInput">Username</label>
+      <input
+        type="text"
+        class="form-control"
+        placeholder="Enter Username"
+        name="username"
+      />
+      <small id="emailHelp" class="form-text text-muted"
+        >We'll never share your email with anyone else.</small
+      >
+    </div>
+    <div class="form-group">
+      <label for="exampleInputPassword1">Password</label>
+      <input
+        type="password"
+        class="form-control"
+        id="exampleInputPassword1"
+        name="password"
+        placeholder="Password"
+      />
+    </div>
+
+    <div class="form-group">
+      <label>CLass ==></label>
+      <select name="class_name" id="">
+        <option value="volvo">B-Tech C.S</option>
+        <option value="saab">B-Tech I.T</option>
+      </select>
+    </div>
+
+    <button type="submit" class="btn btn-primary">Sign UP</button>
+  </form>
+</div>
 <%-include('partials/footer') %>
