--- a/views/notes.ejs
+++ b/views/notes.ejs
@@ -2,7 +2,7 @@
 <div class="container">
   <header class="jumbotron">
     <div class="container">
-      <h1>Welcome To Notes_Maker</h1>
+      <h1 id="check">Welcome To Notes_Maker</h1>
       <p>A Simple app to organise your Notes</p>
       <p>
         <a class="btn btn-primary btn-large" href="/notes/uploads"
@@ -13,8 +13,9 @@
   </header>
 
   <div class="row text-center" style="display: flex; flex-wrap: wrap">
-    <% if(files){ %> <% files.forEach(function(file) { %>
-    <!-- console.log(<%=file._id%>) -->
+    <%if(files){%> <% files.forEach(function(file){%>
+    <%classic.forEach(function(clss){%> <% if(file.filename==clss.text &&
+    clss.class_name==req.user.class_name){%>
     <div class="col-md-3 col-sm-6">
       <div class="thumbnail">
         <a href="image/<%=file.filename%>">
@@ -38,6 +39,13 @@
         </a>
       </div>
     </div>
+    <% }%> <% })%> <% })%> <%}%>
+  </div>
+
+  <div class="row text-center" style="display: flex; flex-wrap: wrap">
+    <% if(files){ %> <% files.forEach(function(file) { %>
+    <!-- console.log(<%=file._id%>) -->
+
     <% })} %>
   </div>
 </div>
