--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -6,7 +6,15 @@
       rel="stylesheet"
       href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css"
     />
-    <link rel="stylesheet" href="/stylesheets/main.css" />
+    <link rel="stylesheet" href="/public/stylesheets/main.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css
+
+
+
+      "
+    />
   </head>
   <body
     style="
@@ -17,7 +25,7 @@
       height: 100%;
     "
   >
-    <nav class="navbar navbar-default">
+    <nav class="navbar navbar-inverse">
       <div class="container-fluid">
         <div class="navbar-header">
           <a class="navbar-brand" href="/">Notes_Maker</a>
@@ -25,11 +33,29 @@
         <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav navbar-right">
             <% if(!currentUser){ %>
-            <li><a href="/login">Login</a></li>
-            <li><a href="/register">Sign Up</a></li>
+            <li>
+              <a href="/login"><i class="fas fa-sign-in-alt"></i> Login</a>
+            </li>
+            <li>
+              <a href="/register"><i class="fas fa-user-alt"></i> Sign Up</a>
+            </li>
             <% } else { %>
-            <li><a href="#">Signed In As <%= currentUser.username %></a></li>
-            <li><a href="/logout">Logout</a></li>
+            <li>
+              <a href="#">
+                <i class="fas fa-user-alt"></i>
+
+                Signed In As <%= currentUser.username %></a
+              >
+            </li>
+            <li>
+              <a href="#"
+                ><i class="fas fa-chalkboard-teacher"></i> Classroom :
+                <%=currentUser.class_name%>
+              </a>
+            </li>
+            <li>
+              <a href="/logout"><i class="fas fa-sign-out-alt"></i>Logout</a>
+            </li>
             <% } %>
           </ul>
         </div>
